# explorer_robot

./: CMakeLists.txt  License  README.md  package.xml
include/: explorerBot.hpp
launch/: demo.launch
results/: cppcheck_output.txt  cpplint_output.txt
src/: explorerBot.cpp  main.cpp
